lib/tests/fixtures/compiler/parser/bad_class_name.baseline
Error: bad_class_name.pp:1:7: 'main' is not a valid name for a class.
  class main
        ^~~~
